fixed sort by alignment

--- a/client/front_end/src/styles/Header.css
+++ b/client/front_end/src/styles/Header.css
@@ -93,7 +93,7 @@ nav img {
   border-radius: 10px;
   color: #f4f4f4;
   -ms-transform: translateY(-50%);
-  transform: translateY(2%);
+  transform: translateY(11%);
   margin-right: 7px;
   font-size: 20px;
 }
